examples/test/testpolicy2822.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2822
  namespace: namespace393
spec:
  podSelector:
    matchLabels:
      key46: value28
      key41: value32
      key17: value13
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key39: value20
          key45: value43
          key30: value14
